syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ChildQuest {
	uint32 quest_id = 1;
	uint32 state = 2;
	uint32 quest_config_id = 3;
}
